Enable optional query parameter 'node' which filters results on the specified id - enables multi-tenancy
